--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,24 @@
-Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1610110616644/work
+Brotli==1.0.9
 certifi==2020.12.5
 click==7.1.2
-dash @ file:///home/conda/feedstock_root/build_artifacts/dash_1611245648458/work
-dash-core-components @ file:///home/conda/feedstock_root/build_artifacts/dash-core-components_1611131211583/work
-dash-html-components @ file:///home/conda/feedstock_root/build_artifacts/dash-html-components_1611131203577/work
-dash-renderer @ file:///home/conda/feedstock_root/build_artifacts/dash-renderer_1611094782021/work
-dash-table @ file:///home/conda/feedstock_root/build_artifacts/dash-table_1611131210372/work
+dash==1.18.1
+dash-core-components==1.14.1
+dash-html-components==1.1.1
+dash-renderer==1.8.3
+dash-table==4.11.1
 Flask==1.1.2
-Flask-Compress @ file:///home/conda/feedstock_root/build_artifacts/flask-compress_1604422164145/work
-future @ file:///Users/runner/miniforge3/conda-bld/future_1610147271444/work
-gunicorn @ file:///Users/runner/miniforge3/conda-bld/gunicorn_1610137017237/work
+Flask-Compress==1.8.0
+future==0.18.2
+gunicorn
 itsdangerous==1.1.0
 Jinja2==2.11.2
-MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1610127727012/work
-numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1610324567119/work
+MarkupSafe==1.1.1
+numpy==1.19.2
 pandas==1.2.1
-plotly @ file:///home/conda/feedstock_root/build_artifacts/plotly_1610471242275/work
+plotly==4.14.1
 python-dateutil==2.8.1
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1608904108784/work
+pytz==2020.1
 PyYAML==5.4.1
 retrying==1.3.3
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
+six==1.15.0
 Werkzeug==1.0.1
