--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 numpy==1.19.2
-pandas==1.2.1
+pandas
 plotly==4.14.1
 python-dateutil==2.8.1
 pytz==2020.1
